<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="title_activity_drving_behavior">DrvingBehaviorActivity</string>
    <string name="title_activity_integral">IntegralActivity</string>
    <string name="title_activity_integral_help">IntegralHelpActivity</string>
    <string name="title_activity_setting">SettingActivity</string>
    <string name="title_activity_my_treasure">MyTreasureActivity</string>
    <string name="title_activity_choosedate">ChooseDateBirthActivity</string>
    <string name="title_activity_return_fee_that">ReturnFeeThatActivity</string>
    <string name="title_activity_telephone_explain">TelephoneExplainActivity</string>
    <string name="title_activity_withdraw_deposit">WithdrawDepositActivity</string>
    <string name="title_activity_return_the_money_datails">ReturnTheMoneyDatailsActivity</string>
    <string name="title_activity_telephone_charge_detils">TelephoneChargeDetilsActivity</string>
    <string name="title_activity_push_details">PushDetailsActivity</string>
    <string name="title_activity_circle_information_detail">CircleInformationDetailActivity</string>
    <string name="title_activity_information_second_list">InformationSecondListActivity</string>
    <string name="umeng_example_home_btn_analytics">Analytics</string>
    <string name="umeng_example_home_btn_xp">XP</string>
    <string name="umeng_example_home_btn_ad">Ads</string>
    <string name="umeng_example_home_btn_tools">Tools</string>
    <string name="umeng_example_home_btn_fb">Feedback</string>
    <string name="umeng_example_home_btn_update">Update</string>
    <string name="umeng_example_home_btn_plus">Socialize</string>
    <string name="umeng_example_home_btn_xp_ufp">Umeng For Publisher</string>
    <string name="umeng_example_xp_home_btn_container">Container</string>
    <string name="umeng_example_xp_home_btn_banner">Banner</string>
    <string name="umeng_example_xp_home_btn_banner_ufp">"Banner\n(UFP)"</string>
    <string name="umeng_example_xp_home_btn_handler">Handler</string>
    <string name="umeng_example_xp_home_btn_handler_ufp">"Handler\n(UFP)"</string>
    <string name="umeng_example_xp_home_btn_tab">Multi-Pages</string>
    <string name="umeng_example_xp_home_btn_wap">WebView</string>
    <string name="umeng_example_xp_home_btn_custom">Custom</string>
    <string name="umeng_example_xp_home_btn_wap_ufp">"WebView\n(UFP)"</string>
    <string name="umeng_example_xp_home_btn_push_header">Push AD\n(UFP)</string>
    <string name="umeng_example_xp_home_btn_textlink">Text Link</string>
    <string name="umeng_example_xp_home_btn_container_header">LargeImage</string>
    <string name="umeng_example_xp_home_handler_icons">Icons \n(UFP)</string>
    <string name="umeng_example_fb_home_btn_simple">Simple Demo</string>
    <string name="actionbar_activity_not_found">Failed to open intent&#8230;</string>
    <string name="umeng_example_home_hint_wait">Coming soooooon</string>
    <string name="intro"> The webview before show js call Umeng Analytics APIs</string>
    <string name="app_name">车生活</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="message_center">消息中心</string>
    <string name="xlistview_header_hint_normal">下拉刷新\u2026</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载\u2026</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="pull_to_refresh_footer_release_label">松开后加载</string>
    <string name="pull_to_refresh_footer_pull_label">上拉加载更多</string>
    <string name="pull_to_refresh_footer_refreshing_label">加载中\u2026</string>
    <string name="item_del">删除</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="back">返回</string>
    <string name="car_shop">精品商城</string>
    <string name="save">保存</string>
    <string name="finish">完成</string>
    <string name="choose">选择</string>
    <string name="detail">详情</string>
    <string name="sure">确定</string>
    <string name="cancel">取消</string>
    <string name="remind">提示</string>
    <string name="relogin">重新登录</string>
    <string name="already_know">知道了</string>
    <string name="exit_system">再按一次退出程序</string>
    <string name="no_device">当前未绑定设备</string>
    <string name="back_save_remind">此操作会使未保存的信息丢失，您确定要返回吗？</string>
    <string name="check_remind">此操作会使未保存的信息丢失，您确定要返回吗？</string>
    <string name="home_no_device">请先绑定设备</string>
    <string name="home_goto_bind">前往绑定</string>
    <string name="notLogined">您还未登录</string>
    <string name="noCar">您还未绑定车辆</string>
    <string name="car_dynamic">车辆动态</string>
    <string name="str_forward">前进</string>
    <string name="mycar_now_location">当前位置:</string>
    <string name="mycar_find_car_port">找车位</string>
    <string name="location_failed">车辆定位失败，请检查OBD设备</string>
    <string name="special_location_chongqing">重庆</string>
    <string name="special_location_beijing">北京</string>
    <string name="special_location_tianjin">天津</string>
    <string name="special_location_shanghai">上海</string>
    <string name="special_location_hongkong">香港</string>
    <string name="special_location_aomen">澳门</string>
    <string name="mycar_mile">里程</string>
    <string name="mycar_check_violation">查违章</string>
    <string name="mycar_navigation">导航</string>
    <string name="mycar_drive_time">行驶时间</string>
    <string name="mycar_avg_oil">平均油耗</string>
    <string name="mycar_speed">速度</string>
    <string name="mycar_upload">最后上传</string>
    <string name="mycar_input_destination">请输入你要导航的目的地</string>
    <string name="mycar_to_there">到这去</string>
    <string name="mycar_my_footprint">足迹</string>
    <string name="mycar_report">用车报告</string>
    <string name="mycar_more">更多</string>
    <string name="mycar_car_consult">车资讯</string>
    <string name="mycar_find_gasstation">找加油站</string>
    <string name="wash_no">我还没到洗车店</string>
    <string name="wash_else">其他原因</string>
    <string name="wash_cause">请输入您还没洗车的原因</string>
    <string name="wash_submit">提交</string>
    <string name="order_itme_countersign">你是否已经洗车</string>
    <string name="order_itme_title_countersign">确认订单</string>
    <string name="order_itme_yes">是,我已经洗车</string>
    <string name="order_itme_no">否,还没有洗</string>
    <string name="car_idea">养车订单</string>
    <string name="car_shopping">商城订单</string>
    <string name="idea">0/100</string>
    <string name="idea_refer">立即提交</string>
    <string name="set_out">退出登录</string>
    <string name="set_alarm">报警设置</string>
    <string name="set_sound">声音提醒</string>
    <string name="set_shake">震动提醒</string>
    <string name="set_push">接收推送消息</string>
    <string name="set_reputation">5星好评</string>
    <string name="set_version">当前版本</string>
    <string name="set_about_my">关于我们</string>
    <string name="set_clear_cache">清除缓存</string>
    <string name="webName">网址:</string>
    <string name="web">www.chcws.com</string>
    <string name="weChat">微信公众账号:长虹车卫士</string>
    <string name="service_phone">客服电话:400-800-8820</string>
    <string name="service_one">客服电话:</string>
    <string name="phone_servies">400-800-8820</string>
    <string name="Mon">周一</string>
    <string name="Tue">周二</string>
    <string name="Wed">周三</string>
    <string name="Thu">周四</string>
    <string name="Fri">周五</string>
    <string name="Sat">周六</string>
    <string name="Sun">周日</string>
    <string name="signin_title">签到详情</string>
    <string name="signin_previous_page">上一页</string>
    <string name="signin_next_page">下一页</string>
    <string name="signin_sign_today">今日签到</string>
    <string name="signin_tip">提示：每日签到可以获取积分哦~~</string>
    <string name="check_update_old">已经是最新版本 </string>
    <string name="check_update_new">点击更新</string>
    <string name="set">设置</string>
    <string name="set_edition">V1.231</string>
    <string name="logout">退出登录</string>
    <string name="logout_dialog">您确定要退出？</string>
    <string name="text_ack_msg">已读</string>
    <string name="text_delivered_msg">送达</string>
    <string name="button_pushtotalk">按住说话</string>
    <string name="button_send">发送</string>
    <string name="attach_smile">表情</string>
    <string name="attach_picture">图片</string>
    <string name="attach_take_pic">拍照</string>
    <string name="attach_location">位置</string>
    <string name="attach_file">文件</string>
    <string name="attach_voice_call">语音电话</string>
    <string name="attach_video_call">视频通话</string>
    <string name="user_card">名片</string>
    <string name="move_up_to_cancel">手指上滑，取消发送</string>
    <string name="release_to_cancel">松开手指，取消发送</string>
    <string name="send_fail">发送消息失败,</string>
    <string name="delete_message">删除消息</string>
    <string name="copy_message">复制消息</string>
    <string name="delete_voice">删除语音</string>
    <string name="delete_video">删除视频</string>
    <string name="delete">删除</string>
    <string name="resend">重发</string>
    <string name="confirm_resend">确认重发该信息？</string>
    <string name="connect_failuer_toast">请检查网络或稍候重试</string>
    <string name="network_unavailable">网络连接不可用，请检查网络</string>
    <string name="copy">复制</string>
    <string name="forward">转发</string>
    <string name="button_logout">退出登录</string>
    <string name="button_uploadlog">上传运行日志</string>
    <string name="ok">确定</string>
    <string name="Submit">提交</string>
    <string name="prompt">提示</string>
    <string name="clear_records">清空记录</string>
    <string name="clear_all_records">是否清空所有聊天记录？</string>
    <string name="location_recv">[%1$s的位置]</string>
    <string name="location_message">位置信息</string>
    <string name="recording_video">录制视频</string>
    <string name="location_prefix">[我的位置]</string>
    <string name="picture">[图片]</string>
    <string name="video">[视频]</string>
    <string name="file">[文件]</string>
    <string name="voice_call">[语音通话]</string>
    <string name="button_cancel">取消</string>
    <string name="button_save">保存</string>
    <string name="button_search">查找</string>
    <string name="button_add">添加</string>
    <string name="search_header">搜</string>
    <string name="network_isnot_available">网络不可用</string>
    <string name="recoding_fail">录音失败，请重试！</string>
    <string name="select_contacts">选择联系人</string>
    <string name="confirm_forward_to">确定转发到：%1$s ?</string>
    <string name="logout_hint">退出后不会删除任何历史数据，下次登录依然可以使用本账号</string>
    <string name="exit_group_hint">退出后，将不再接收此群聊信息</string>
    <string name="dissolution_group_hint">退出后，此群将被解散</string>
    <string name="exit_group">退出</string>
    <string name="connect_conflict">同一帐号已在其他设备登录</string>
    <string name="em_user_remove">此用户已被移除</string>
    <string name="notify">新消息提醒</string>
    <string name="newnotify">接收新消息通知</string>
    <string name="voice">声音</string>
    <string name="shake">震动</string>
    <string name="chatset">聊天设置</string>
    <string name="yangshengqi">使用扬声器播放语音</string>
    <string name="book_black">通讯录黑名单</string>
    <string name="session">会话</string>
    <string name="address_book">通讯录</string>
    <string name="setting">设置</string>
    <string name="now_refresh_list">正在刷新联系人</string>
    <string name="sos_contact_name">称呼</string>
    <string name="sos_contact_tel">手机</string>
    <string name="sos_contact_name_remind">请输入您对TA的称呼</string>
    <string name="sos_contact_tel_remind">请输入对方手机号码</string>
    <string name="zhendong">震动报警</string>
    <string name="zhengdong_hint">打开震动报警，了解车辆异常震动状况</string>
    <string name="yidong">异常位移报警</string>
    <string name="yidong_hint">打开异常位移报警，了解车辆异常位移状况</string>
    <string name="shuiwen">水温报警</string>
    <string name="shuiwen_hint">打开水温异常报警，了解车辆水温异常状况</string>
    <string name="pengzhuang">碰撞报警</string>
    <string name="pengzhuang_hint">打开碰撞报警，了解车辆安全状况</string>
    <string name="dianpinchaichu">供电系统异常报警</string>
    <string name="dianpinchaichu_hint">打开供电系统异常报警，了解供电系统状况</string>
</resources>