<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@null"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_backgroud">

    <include
        android:id="@+id/in_title"
        layout="@layout/title" />

    <LinearLayout
        android:id="@+id/ll_message"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_below="@id/in_title"
        android:orientation="horizontal"
        android:paddingTop="10dp">

        <TextView
            android:id="@+id/tv_pre"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/signin_previous_page"
            android:textColor="@color/orange_text_color"
            android:textSize="@dimen/titile_side_text_size" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="@color/orange_text_color"
            android:textSize="@dimen/titile_side_text_size" />

        <TextView
            android:id="@+id/tv_next"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/signin_next_page"
            android:textColor="@color/orange_text_color"
            android:textSize="@dimen/titile_side_text_size" />
    </LinearLayout>

    <ImageView
        android:id="@+id/img_up"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_below="@id/ll_message"
        android:layout_centerHorizontal="true"
        android:src="@drawable/qingdaoxingqing_ding" />
    <!-- 日历控件 -->

    <LinearLayout
        android:id="@+id/llayout_kuang"
        android:layout_width="@dimen/signin_big_width"
        android:layout_height="wrap_content"
        android:layout_below="@id/img_up"
        android:layout_centerHorizontal="true"
        android:background="@drawable/qingdaoxingqing_kuang"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_showdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="5dp"
            android:textColor="@color/orange_text_color"
            android:textSize="@dimen/titile_side_text_size" />

        <LinearLayout
            android:id="@+id/llayout_title"
            style="@null"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="5dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/Sun"
                android:textColor="@color/orange_text_color" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/Mon"
                android:textColor="@color/orange_text_color" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/Tue"
                android:textColor="@color/orange_text_color" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/Wed"
                android:textColor="@color/orange_text_color" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/Thu"
                android:textColor="@color/orange_text_color" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/Fri"
                android:textColor="@color/orange_text_color" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/Sat"
                android:textColor="@color/orange_text_color" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/orange_text_color" />
        <!-- 308dp -->

        <com.cheweishi.android.widget.WrapSizeGridView
            android:id="@+id/gridview"
            android:layout_width="@dimen/signin_small_width"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="5dp"
            android:background="@color/orange"
            android:numColumns="7"
            android:stretchMode="columnWidth"
            android:verticalSpacing="1dp"></com.cheweishi.android.widget.WrapSizeGridView>
    </LinearLayout>

    <TextView
        android:id="@+id/tv_signid_days"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/llayout_kuang"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="10dp"
        android:text="@string/signin_tip"
        android:textColor="#666666"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tv_signin"
        style="@null"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_signid_days"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:textColor="@color/white" />

</RelativeLayout>