<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_backgroud"
    android:orientation="vertical"
    tools:context=".SOSContactActivity">

    <include layout="@layout/title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/large_marging"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:padding="@dimen/normal_padding">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="@dimen/normal_padding"
            android:text="@string/sos_contact_name"
            android:textColor="@color/black"
            android:textSize="@dimen/titile_side_text_size"></TextView>

        <EditText
            android:id="@+id/et_sos_contact_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:hint="@string/sos_contact_name_remind"
            android:maxLength="20"
            android:textColor="@color/black"
            android:textSize="@dimen/titile_side_text_size" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:padding="@dimen/normal_padding">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="@dimen/normal_padding"
            android:singleLine="true"
            android:text="@string/sos_contact_tel"
            android:textColor="@color/black"
            android:textSize="@dimen/titile_side_text_size"></TextView>

        <EditText
            android:id="@+id/et_sos_contact_tel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:digits="0123456789"
            android:hint="@string/sos_contact_tel_remind"
            android:maxLength="14"
            android:singleLine="true"
            android:inputType="phone"
            android:textColor="@color/black"
            android:textSize="@dimen/titile_side_text_size" />
    </LinearLayout>

</LinearLayout>